--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
+  "eslintConfig": {
+    "extends":"./node_modules/standard/eslintrc.json"
+  },
   "devDependencies": {
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
@@ -21,6 +24,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
+    "standard": "^17.1.0",
     "vite": "^4.4.0"
   }
 }
