--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,4 @@
   deployment:
     tasks:
       - export DEPLOYPATH=/home/vivimxhome/public_html/
-      - /bin/cp -r * $DEPLOYPATH
+      - /bin/cp -r WebPage---Laravel-10---Reactjs/api $DEPLOYPATH
