--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,5 @@
   deployment:
     tasks:
       - export DEPLOYPATH=/home/vivimxhome/public_html/
-      - /bin/cp -r WebPage---Laravel-10---Reactjs/api $DEPLOYPATH
+      - export APIPATH=/home/vivimxhome/repositories/WebPage---Laravel-10---Reactjs/api
+      - /bin/cp -r $APIPATH $DEPLOYPATH
