--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -3,4 +3,7 @@
     tasks:
       - export DEPLOYPATH=/home/vivimxhome/public_html/
       - export APIPATH=/home/vivimxhome/repositories/WebPage---Laravel-10---Reactjs/api
+      - export APPPATH=/home/vivimxhome/repositories/WebPage---Laravel-10---Reactjs/frontend/dist      
       - /bin/cp -r $APIPATH $DEPLOYPATH
+      - /bin/cp -r $APPPATH $DEPLOYPATH
+      
