--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,6 +2,8 @@
   deployment:
     tasks:
       - export DEPLOYPATH=/home/vivimxhome/public_html/
-      - export APIPATH=/home/vivimxhome/repositories/WebPage---Laravel-10---Reactjs/api          
+      - export APIPATH=/home/vivimxhome/repositories/WebPage---Laravel-10---Reactjs/api
       - /bin/cp -r $APIPATH $DEPLOYPATH
-      - /bin/cp -r /home/vivimxhome/repositories/WebPage---Laravel-10---Reactjs/frontend/dist $DEPLOYPATH      
+      - export DEPLOYPATH=/home/vivimxhome/public_html/
+      - export APPPATH=/home/vivimxhome/repositories/WebPage---Laravel-10---Reactjs/frontend/dist
+      - /bin/cp -r $APPPATH $DEPLOYPATH      
