--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,4 @@
   deployment:
     tasks:
       - export DEPLOYPATH=/home/vivimxhome/public_html/
-      - export APIPATH=/home/vivimxhome/repositories/WebPage---Laravel-10---Reactjs/api
-      - /bin/cp -r $APIPATH $DEPLOYPATH    
+      - /bin/cp -r /home/vivimxhome/repositories/WebPage---Laravel-10---Reactjs/api $DEPLOYPATH    
